<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/alain_launchGoogle"
        android:title="Yes/No"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@mipmap/busicontwo"
        />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_help"
        />

    <item
        android:id="@+id/activity_1"
        android:title="@string/alain_activity1"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_help"
        />
    <item
        android:id="@+id/activity_2"
        android:title="@string/alain_activity2"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_help"
        />
    <item
        android:id="@+id/activity_3"
        android:title="@string/alain_activity3"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_add"
        />
    <item
        android:id="@+id/activity_4"
        android:title="@string/alain_activity4"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_my_calendar"
        />
    <item
        android:id="@+id/menu_about"
        android:title="@string/alain_about"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_input_get"
        />
</menu>